# scarpet

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  README_jp.md  scarpet-fmt.toml  typos.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  update-submodules.yml
scarpet-cli/: Cargo.toml
scarpet-cli/src/: main.rs
scarpet-fmt/: Cargo.toml  README.md
scarpet-fmt/src/: config.rs  doc.rs  lib.rs  lower.rs  trivia.rs
scarpet-lsp/: Cargo.toml
scarpet-lsp/src/: lib.rs  main.rs
scarpet-playground/: Cargo.toml  Trunk.toml  index.html  style.css
scarpet-playground/src/: app.rs  components.rs  editor.rs  header.rs  main.rs  notebook.rs  options.rs  session.rs  shared.rs
scarpet-playground/src/components/: header.rs  options.rs
scarpet-playground/src/editor/: view.rs
scarpet-playground/src/notebook/: session.rs  view.rs
scarpet-syntax/: Cargo.toml  scarpet.ungram
scarpet-syntax/src/: ast.rs  corpus.rs  cst.rs  lex.rs  lexer.rs  lib.rs  nodes.rs  parse.rs  parser.rs  syntax.rs  syntax_kind.rs
scarpet-syntax/src/cst/: ext.rs  generated.rs
scarpet-syntax/src/nodes/: generated.rs
scarpet-syntax/tests/: corpus.rs  sourcegen.rs
scarpet-vm/: Cargo.toml
scarpet-vm/src/: error.rs  eval.rs  function.rs  lib.rs  test_util.rs  value.rs  vm.rs
scarpet-vm/src/eval/: assign.rs  destructure.rs  operator.rs  primary.rs  stmt.rs
scarpet-vm/src/function/: builtin.rs  def.rs  iter.rs
scarpet-vm/src/value/: access.rs  add.rs  arithmetic.rs  compare.rs  container.rs  list.rs  mul.rs  query.rs
scarpet-vm/src/value/list/: array.rs  range.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  main.rs
