[workspace]
resolver = "3"
members = [
  "scarpet-cli",
  "scarpet-fmt",
  "scarpet-lsp",
  "scarpet-playground",
  "scarpet-syntax",
  "scarpet-vm",
]

[workspace.dependencies]
ariadne = { version = "0.6", features = ["auto-color"] }
clap = { version = "4.6.1", features = ["derive"] }
regex = { version = "1" }
rowan = { version = "0.16" }
rustyline = { version = "18" }
similar = { version = "3" }
scarpet-fmt = { path = "./scarpet-fmt" }
scarpet-syntax = { path = "./scarpet-syntax" }
scarpet-vm = { path = "./scarpet-vm" }
serde = { version = "1", features = ["derive"] }
toml = { version = "1" }
ungrammar = { version = "1.16" }
