[package]
name = "scarpet-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne.workspace = true
clap.workspace = true
rustyline.workspace = true
scarpet-fmt.workspace = true
scarpet-lsp = { path = "../scarpet-lsp" }
scarpet-syntax.workspace = true
scarpet-vm.workspace = true
serde.workspace = true
similar.workspace = true
toml.workspace = true
